2. Add 'Play album starting at track' item to track context menus. Only if
   parent is an album, and track is not 1st track.
3. Respect genre/artist filtering when adding albums/artists to queue.
4. Add a setting to specify application layout; auto, desktop, mobile.
5. Add optional grid view for artists, albums, and SlimBrowse icon_list.
6. Fix durations longer than 24hrs.

0.1.0
-----
 1. After list is loaded, wait until next tick to scroll to top.
 2. Fix detection of first valid album when getting A..Z lists.
 3. Show context menu when clicking on an item that has actions.go=playControl
    or actions.go=play
 4. Initial work on desktop UI.
 5. Check with server to determine whether to show track numbers in queue.
 6. Colour current track in queue.
 7. Don't check artist/album in MusicArtistInfo is same as current track, as the
    plugin may remove characters (e.g. brackets).
 8. Clicking on title in browse sub-toolbar will produce a menu allowing
    navigation back multiple levels.
 9. Fix language update causing browse items to disappear.
10. Use artist_id and album_id to obtain info if available.

0.0.9
-----
 1. Additional browse modes only supported if "Use categories as supplied by
    server" is enabled.
 2. Fix missing menu items if using server supplied browse modes, and start in
    any view bar browse.
 3. Fix 'What Was That Tune?' missing covers.
 4. If a browse response returns a count of -1, then set count to number of
    items.
 5. When getting categories from server, modify command parameters for album
    sort.
 6. Ensure A..Z splitting is not used for 'New Music' or 'Random Albums'
 7. Only show "i" icon in toolbar for now-playing if music and artist info
    plugin is installed.
 8. Support 'More' command.
 9. Make player list menu scrollable.
10. Fix adding albums to favorites.
11. Use encodeURIComponent to encode favorites, not encodeURI
12. Work-around iOS list size issue by adding a small amount of padding.