@@ -12,6 +12,7 @@
 "Album gain":"Album-Normalisierung",
 "Albums":"Alben",
 "All Artists":"Alle Interpreten",
+"All plugins up to date.":"",
 "Alphabetically sort favorites, rather than server supplied order.":"Sortiere alphabetisch, ignoriere Einstellungen des Servers.",
 "Already in favorites":"Bereits bei Favoriten",
 "Always show menu":"Menü immer anzeigen",
@@ -58,6 +59,7 @@
 "Failed":"Fehlgeschlagen",
 "Failed to add to favorites!":"Favorit speichern fehlgeschlagen!",
 "Failed to delete playlist!":"Playlist löschen fehlgeschlagen!",
+"Failed to determine plugin status.":"",
 "Failed to find an album!":"Albumsuche fehlgeschlagen!",
 "Failed to remove favorite!":"Favorit entfernen fehlgeschlagen!",
 "Failed to retrieve listing. (%1)":"Liste abrufen fehlgeschlagen!",
@@ -116,6 +118,7 @@
 "Players":"Player",
 "Playing":"Wiedergabe",
 "Playlists":"Wiedergabelisten",
+"Plugins":"",
 "Queue":"Aktuelle Wiedergabeliste",
 "Radio":"",
 "Random Albums":"Zufällig Alben",
@@ -175,6 +178,7 @@
 "Sunday":"Sonntag",
 "Synchronise":"Synchronisieren",
 "Synchronise with":"Synchronisiere mit",
+"The following plugins have updates available:":"",
 "Thurs":"Don",
 "Thursday":"Donnerstag",
 "Timeout (minutes)":"Timeout (Minuten)",
