@@ -12,6 +12,7 @@
 "Album gain":"",
 "Albums":"",
 "All Artists":"",
+"All plugins up to date.":"",
 "Alphabetically sort favorites, rather than server supplied order.":"Alphabetically sort favourites, rather than server supplied order.",
 "Already in favorites":"Already in favourites",
 "Always show menu":"",
@@ -58,6 +59,7 @@
 "Failed":"",
 "Failed to add to favorites!":"Failed to add to favourites!",
 "Failed to delete playlist!":"",
+"Failed to determine plugin status.":"",
 "Failed to find an album!":"",
 "Failed to remove favorite!":"Failed to remove favourite!",
 "Failed to retrieve listing. (%1)":"",
@@ -116,6 +118,7 @@
 "Players":"",
 "Playing":"",
 "Playlists":"",
+"Plugins":"",
 "Queue":"",
 "Radio":"",
 "Random Albums":"",
@@ -175,6 +178,7 @@
 "Sunday":"",
 "Synchronise":"",
 "Synchronise with":"",
+"The following plugins have updates available:":"",
 "Thurs":"",
 "Thursday":"",
 "Timeout (minutes)":"",
