@@ -12,6 +12,7 @@
 "Album gain":"Normalisation de niveau par album",
 "Albums":"Albums",
 "All Artists":"Tous Interprètes",
+"All plugins up to date.":"",
 "Alphabetically sort favorites, rather than server supplied order.":"",
 "Already in favorites":"Déjà présent dans les favoris",
 "Always show menu":"",
@@ -58,6 +59,7 @@
 "Failed":"Échoué",
 "Failed to add to favorites!":"Échec d'ajout aux favoris!",
 "Failed to delete playlist!":"Échec d'enlèvement de la liste de lecture!",
+"Failed to determine plugin status.":"",
 "Failed to find an album!":"Album introuvable!",
 "Failed to remove favorite!":"Échec d'enlèvement de favori!",
 "Failed to retrieve listing. (%1)":"Impossible d'afficher les données. (%1)",
@@ -116,6 +118,7 @@
 "Players":"",
 "Playing":"En cours de lecture",
 "Playlists":"Listes de lecture",
+"Plugins":"",
 "Queue":"Liste de lecture actuelle",
 "Radio":"",
 "Random Albums":"",
@@ -175,6 +178,7 @@
 "Sunday":"Dimanche",
 "Synchronise":"Synchroniser",
 "Synchronise with":"Synchroniser avec",
+"The following plugins have updates available:":"",
 "Thurs":"Je",
 "Thursday":"Jeudi",
 "Timeout (minutes)":"Délais d'attente (minutes)",
