@@ -12,6 +12,7 @@
 "Album gain":"Album normalisering",
 "Albums":"Albums",
 "All Artists":"Alle Artiesten",
+"All plugins up to date.":"",
 "Alphabetically sort favorites, rather than server supplied order.":"",
 "Already in favorites":"Reeds in favorieten",
 "Always show menu":"",
@@ -58,6 +59,7 @@
 "Failed":"",
 "Failed to add to favorites!":"Toevoegen aan favorieten mislukt!",
 "Failed to delete playlist!":"Toevoegen aan afspeellijst mislukt!",
+"Failed to determine plugin status.":"",
 "Failed to find an album!":"Album niet gevonden!",
 "Failed to remove favorite!":"Verwijderen van favoriet mislukt!",
 "Failed to retrieve listing. (%1)":"Ophalen van de lijst mislukt. (%1)",
@@ -116,6 +118,7 @@
 "Players":"",
 "Playing":"Spelend",
 "Playlists":"Afspeellijsten",
+"Plugins":"",
 "Queue":"Huidige afspeellijst",
 "Radio":"",
 "Random Albums":"",
@@ -175,6 +178,7 @@
 "Sunday":"Zondag",
 "Synchronise":"Synchroniseren",
 "Synchronise with":"Synchroniseren met",
+"The following plugins have updates available:":"",
 "Thurs":"Do",
 "Thursday":"Donderdag",
 "Timeout (minutes)":"Timeout (minuten)",
